--- a/account.html
+++ b/account.html
@@ -22,7 +22,7 @@
                         <li><a href="products.html">products</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Acount</a></li>
+                        <li><a href="account.htmlAcount</a></li>
                         <li id="hide"><i class="fas fa-times"></i></li>
                     </ul>
                     <div class="cart">
