--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <li id="hide"><i class="fas fa-times"></i></li>
                     </ul>
                     <div class="cart">
-                        <img src="images/cart.png" alt="">
-                    </div>
+                        <a href="cart.html"><img src="images/cart.png" alt="">
+                        </div>
                     <div class="menu" id="icon">
                         <img src="images/menu.png" alt="">
                     </div>
