--- a/cart.html
+++ b/cart.html
@@ -22,12 +22,12 @@
                     <li><a href="products.html">products</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">Acount</a></li>
+                    <li><a href="account.html">Acount</a></li>
                     <li id="hide"><i class="fas fa-times"></i></li>
                 </ul>
                 <div class="cart">
-                    <img src="images/cart.png" alt="">
-                </div>
+                    <a href="cart.html"><img src="images/cart.png" alt="">
+                    </div>
                 <div class="menu" id="icon">
                     <img src="images/menu.png" alt="">
                 </div>
