--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
                     <li id="hide"><i class="fas fa-times"></i></li>
                 </ul>
                 <div class="cart">
-                    <a href="cart.html"><img src="images/cart.png" alt="">
+                    <a href="cart.html"><img src="images/cart.png" alt=""></a>
                     </div>
                 <div class="menu" id="icon">
                     <img src="images/menu.png" alt="">
